feat: create monitoring routes
